<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/curr"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text="@string/curr"

        android:gravity="end"

        android:textSize="75sp"


        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        tools:layout_editor_absoluteX="16dp" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/curr"
        android:columnCount="5"
        android:gravity="center_horizontal"
        android:rowCount="4"
        >

        <!-- Row 1 -->
        <Button
            android:id="@+id/seven"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/seven"
            android:textSize="@dimen/textSize"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/eight"
            android:textSize="@dimen/textSize"/>
        <Button
            android:id="@+id/nine"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/nine"
            android:textSize="@dimen/textSize"/>
        <Button
            android:id="@+id/divide"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/divide"
            android:textSize="@dimen/textSize"/>
        <Button
            android:id="@+id/clear"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/clear"
            android:textSize="@dimen/textSize"/>



        <!-- Row 2 -->
        <Button
            android:id="@+id/four"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/four"
            android:textSize="@dimen/textSize"
            android:layout_column="0"
            />
        <Button
            android:id="@+id/five"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/five"
            android:textSize="@dimen/textSize"/>
        <Button
            android:id="@+id/six"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/six"
            android:textSize="@dimen/textSize"/>
        <Button
            android:id="@+id/multiply"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/multiply"
            android:textSize="@dimen/textSize"/>
        <Button
            android:id="@+id/clearEntry"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/clearEntry"
            android:textSize="@dimen/textSize" />



        <!-- Row 3 -->
        <Button
            android:id="@+id/one"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/one"
            android:textSize="@dimen/textSize"
            android:layout_column="0"
            />
        <Button
            android:id="@+id/two"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/two"
            android:textSize="@dimen/textSize"/>
        <Button
            android:id="@+id/three"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/three"
            android:textSize="@dimen/textSize"/>
        <Button
            android:id="@+id/minus"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/minus"
            android:textSize="@dimen/textSize"/>


        <!-- Row 4 -->
        <Button
            android:id="@+id/zero"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/zero"
            android:textSize="@dimen/textSize"
            android:layout_column="0"
            />
        <Button
            android:id="@+id/period"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/period"
            android:textSize="@dimen/textSize"/>
        <Button
            android:id="@+id/plus"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/plus"
            android:textSize="@dimen/textSize"
            android:layout_column="3"/>
        <Button
            android:id="@+id/equals"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/equals"
            android:textSize="@dimen/textSize" />



    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>